# olympian

./: CHANGELOG.md  Cargo.toml
src/: checks.rs  flag.rs  lib.rs  points.rs  qc_tests.rs  util.rs
src/checks/: consistency.rs  series.rs  single.rs  spatial.rs
src/checks/consistency/: greater_than.rs  max_greater_than_single.rs  max_less_than_single.rs  min_greater_than_single.rs  min_less_than_single.rs  not_equal.rs  single_greater_than_element.rs
src/checks/series/: flatline_check.rs  monotonic_increase_check.rs  spike_check.rs  step_check.rs
src/checks/single/: range_check.rs  range_check_humidity.rs  range_check_wind_direction.rs  special_values_check.rs
src/checks/spatial/: buddy_check.rs  sct.rs
src/qc_tests/: aggregate_less_than_set.rs  buddy_check.rs  cloud_consistency_check.rs  cloud_consistency_check2.rs  dip_check.rs  flatline_check.rs  freeze_check.rs  lower_limit_special_value_pair.rs  mod.rs  range_check.rs  range_check_humidity.rs  range_check_pair.rs  range_check_wind_direction.rs  sct.rs  special_values_check.rs  spike_check.rs  step_check.rs  upper_limit_special_value_pair.rs
src/util/: mod.rs  spatial_tree.rs
