[package]
name = "olympian"
version = "0.2.1"
edition = "2021"
description = "Quality control routines for meteorological observations"
repository = "https://github.com/intarga/olympian/"
license = "LGPL-3.0-only"
keywords = ["qc", "quality_control", "weather", "meteorology", "climate"]
categories = ["science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.9.3"
faer-core = "0.9"
faer-lu = "0.9"
dyn-stack = "0.9"
reborrow = "0.5"
thiserror = "1.0.47"
