[package]
name = "olympian"
version = "0.3.2"
edition = "2021"
description = "Quality control routines for meteorological observations"
repository = "https://github.com/intarga/olympian/"
license = "LGPL-3.0-only"
keywords = ["qc", "quality_control", "weather", "meteorology", "climate"]
categories = ["science::geo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.12.0"
faer = "0.19"
thiserror = "1.0.64"
chronoutil = "0.2.7"
